objects/Item_Update__c.object
<CustomObject>
    <fields>
        <fullName>Accounting_Updates__c</fullName>
        <label>Accounting Updates</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Costing Complete</fullName>
                </value>
                <value>
                    <fullName>Costing Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Add_State_Adjustment__c</fullName>
        <label>IIP: Add_State_Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aging__c</fullName>
        <label>IIP: Aging</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alcohol_Percentage__c</fullName>
        <label>IIP: Alcohol Percentage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5.5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>6.5</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>7.5</fullName>
                </value>
                <value>
                    <fullName>7.55</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>8.5</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>9.1</fullName>
                </value>
                <value>
                    <fullName>9.2</fullName>
                </value>
                <value>
                    <fullName>9.5</fullName>
                </value>
                <value>
                    <fullName>9.75</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>10.3</fullName>
                </value>
                <value>
                    <fullName>10.5</fullName>
                </value>
                <value>
                    <fullName>10.7</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>11.5</fullName>
                </value>
                <value>
                    <fullName>11.6</fullName>
                </value>
                <value>
                    <fullName>11.8</fullName>
                </value>
                <value>
                    <fullName>11.9</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>12.1</fullName>
                </value>
                <value>
                    <fullName>12.2</fullName>
                </value>
                <value>
                    <fullName>12.3</fullName>
                </value>
                <value>
                    <fullName>12.4</fullName>
                </value>
                <value>
                    <fullName>12.5</fullName>
                </value>
                <value>
                    <fullName>12.6</fullName>
                </value>
                <value>
                    <fullName>12.7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allocated_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IIP: Allocated Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Appellation__c</fullName>
        <formula>Geography__r.Appellation_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IIP: Appellation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Comments__c</fullName>
        <label>IIP: Approval Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>IIP: Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Pending Approvals</fullName>
                </value>
                <value>
                    <fullName>Approvals Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed - Record Locked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>XXApproved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aroma__c</fullName>
        <label>IIP: Aroma</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backorders_Allowed__c</fullName>
        <label>Backorders Allowed</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Unit_Volume_UOM__c</fullName>
        <description>JDE Primary UOM is the Base_Unit_Volume_UOM - should default to &quot;BT&quot; but could be &quot;KG&quot; if it&apos;s a winery item.</description>
        <inlineHelpText>For non-winery items, this should be defaulted to &apos;BT&apos; for Bottle. JDE Primary UOM is the Base_Unit_Volume_UOM - should default to &quot;BT&quot; but could be &quot;KG&quot; if it&apos;s a winery item.</inlineHelpText>
        <label>IIP: JDE Primary UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BT</fullName>
                    <default>true</default>
                    <label>BT</label>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>KG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Base_Unit_Volume__c</fullName>
        <label>IIP: Base Unit Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Base_Units_per_Case__c</fullName>
        <description>This is the total number of base units of product per case; even if there are kits or mini packs included. For example, Seven Daughters cans are 8 kits of 4 cans each per case, or 24 base units per case.</description>
        <inlineHelpText>This is the total number of base units of product per case; even if there are kits or mini packs included. For example, Seven Daughters cans are 8 kits of 4 cans each per case, or 24 base units per case.</inlineHelpText>
        <label>IIP: Base Units per Case</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Base_Units_per_Case</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Base_Units_per_Kit_Pack__c</fullName>
        <description>New field referencing the number of individual units in a kit or pack.</description>
        <label>IIP: Base Units per Kit/Pack</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_Before_Default_Days__c</fullName>
        <label>Best Before Default Days</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beverage_Code__c</fullName>
        <label>IIP: Beverage Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Beverage_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bottle_Size_Dimensions__c</fullName>
        <formula>&quot; H &quot; &amp; TEXT(Item_Height_in_Inches__c) &amp; &quot; x &quot; &amp;  &quot; W &quot; &amp; TEXT(Item_Width_in_Inches__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IIP: Bottle Size (Dimensions)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bottle_UPC_Number__c</fullName>
        <description>UPC number for the saleable item</description>
        <inlineHelpText>UPC number for the saleable item</inlineHelpText>
        <label>IIP: Item UPC Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bottled_in_the_US__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IIP: Bottled in the US</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bottles_Per_Shipment__c</fullName>
        <label>IIP: Bottles Per Shipment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bottles_per_Shipment_CIF__c</fullName>
        <description>The calculated number of bottles (estimated) based on the Size in Liters of each item.</description>
        <formula>9/( Size_in_Liters__c )*825</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The calculated number of bottles (estimated) based on the Size in Liters of each item.</inlineHelpText>
        <label>IIP: Bottles per Shipment - CIF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bottles_per_Shipment_Warehouse__c</fullName>
        <description>The calculated number of bottles (estimated) based on the Size in Liters of each item.</description>
        <formula>9/( Size_in_Liters__c) * 1200</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The calculated number of bottles (estimated) based on the Size in Liters of each item.</inlineHelpText>
        <label>IIP: Bottles per Shipment - Warehouse</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bottling_Date__c</fullName>
        <label>IIP: Bottling Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Branches__c</fullName>
        <description>Branches for where this item will be set up in JDE.</description>
        <inlineHelpText>Choose all branches appropriate for this item - multi-select by clicking an option and holding the CTRL key down to mult-select.</inlineHelpText>
        <label>IIP: Branches</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>--None--</fullName>
                </value>
                <value>
                    <fullName>2|PATERNO WINES INTERNATIONAL BS|00002|WH|0</fullName>
                    <default>true</default>
                    <label>2|PATERNO WINES INTERNATIONAL BS|00002|WH|0</label>
                </value>
                <value>
                    <fullName>224|CALIFORNIA WAREHOUSE|00002|WH|0</fullName>
                </value>
                <value>
                    <fullName>222|NEW JERSEY WAREHOUSE|00002|WH|0</fullName>
                </value>
                <value>
                    <fullName>22416|DIRECT TO CONSUMER|00016|WH|0</fullName>
                </value>
                <value>
                    <fullName>213|BONDED WAREHOUSE|00002|WH|0</fullName>
                </value>
                <value>
                    <fullName>214|C. AMERICAN WAREHOUSE|00002|WH|0</fullName>
                </value>
                <value>
                    <fullName>216|MICHIGAN WAREHOUSE|00002|WH|0</fullName>
                </value>
                <value>
                    <fullName>217|MISSISSIPPI WAREHOUSE|00002|WH|0</fullName>
                </value>
                <value>
                    <fullName>221|CHICAGO WHSE (CHILL ROOM)|00002|WH|0</fullName>
                </value>
                <value>
                    <fullName>223|IOWA WAREHOUSE|00002|WH|0</fullName>
                </value>
                <value>
                    <fullName>225|N.HAMPSHIRE WAREHOUSE|00002|WH|0</fullName>
                </value>
                <value>
                    <fullName>226|RIVER CITY WAREHOUSE|00002|WH|0</fullName>
                </value>
                <value>
                    <fullName>227|MICHIGAN WAREHOUSE ALTERNATE|00002|WH|0</fullName>
                </value>
                <value>
                    <fullName>228|WEST VIRGINIA WAREHOUSE|00002|WH|0</fullName>
                </value>
                <value>
                    <fullName>229|N.J. HANOVER WAREHOUSE|00002|WH|0</fullName>
                </value>
                <value>
                    <fullName>230|VERMONT WAREHOUSE|00002|WH|0</fullName>
                </value>
                <value>
                    <fullName>231|MAINE WAREHOUSE|00002|WH|0</fullName>
                </value>
                <value>
                    <fullName>232|VIRGINIA WAREHOUSE|00002|WH|0</fullName>
                </value>
                <value>
                    <fullName>233|OHIO (CINCINNATI) WAREHOUSE|00002|WH|0</fullName>
                </value>
                <value>
                    <fullName>234|DOLC IN COLUMBUS|00002|WH|0</fullName>
                </value>
                <value>
                    <fullName>235|TOLEDO OHIO WAREHOUSE|00002|WH|0</fullName>
                </value>
                <value>
                    <fullName>236|CLEVELAND OH WAREHOUSE|00002|WH|0</fullName>
                </value>
                <value>
                    <fullName>237|OREGON BAILMENT WAREHOUSE|00002|WH|0</fullName>
                </value>
                <value>
                    <fullName>238|LIVORNO WAREHOUSE|00002|WH|0</fullName>
                </value>
                <value>
                    <fullName>239|LASPEZIA WAREHOUSE|00002|WH|0</fullName>
                </value>
                <value>
                    <fullName>240|NORTH CAROLINA WAREHOUSE|00002|WH|0</fullName>
                </value>
                <value>
                    <fullName>241|ALABAMA BAILMENT WAREHOUSE|00002|WH|0</fullName>
                </value>
                <value>
                    <fullName>242|TWI INVENTORY AT CHIMNEY ROCK|00002|WH|0</fullName>
                </value>
                <value>
                    <fullName>243|MICHIGAN LCB|00002|</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand_Code_Legal__c</fullName>
        <description>External Id for Ship-Compliant Product Id</description>
        <inlineHelpText>Legal brand code is used by Compliance and is the legal brand code as registered with the TTB and assigned in ShipCompliant.</inlineHelpText>
        <label>IIP: Brand Code (Legal)</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Code_Marketing__c</fullName>
        <description>Brand Code connected to the brand object for this item.</description>
        <formula>Brand__r.Brand_Code_Marketing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the brand code, based on the marketing brand selected for this item. The code cannot be changed on the item directly. This code may or may not be the same as the Brand Code (Legal).</inlineHelpText>
        <label>IIP: Brand Code (Marketing)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IIP: Brand Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Items_Updates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand_Manager__c</fullName>
        <label>Brand VP Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Approval_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand_Mgr_Approved_Timestamp__c</fullName>
        <label>IIP: Brand Mgr Approved Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Brand_Mgr_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Brand VP Approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand_Mgr_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Brand VP Rejected?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IIP: Brand VP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Item_Updates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>IIP: Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipName>Item_Updates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bulk_Packed__c</fullName>
        <label>Bulk Packed</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIF_Cs__c</fullName>
        <label>IIP: CIF / Cs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIF_Upcharge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IIP: CIF Upcharge</label>
        <referenceTo>CIF_Upcharge__c</referenceTo>
        <relationshipName>Item_Updates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Carrier_Number__c</fullName>
        <label>Carrier Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Height_in_Inches__c</fullName>
        <label>IIP: Case Height (in Inches)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Length_in_Inches__c</fullName>
        <inlineHelpText>Length is the longest of the dimensions.</inlineHelpText>
        <label>IIP: Case Length (in Inches)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Material__c</fullName>
        <label>IIP: Case Material</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corrugated</fullName>
                </value>
                <value>
                    <fullName>Wood</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Size_Dimensions__c</fullName>
        <formula>&quot; H &quot; &amp; TEXT(Case_Height_in_Inches__c) &amp; &quot; x &quot; &amp; &quot; W &quot; &amp; TEXT(Case_Width_in_Inches__c) &amp; &quot; x &quot; &amp; &quot; L &quot; &amp; TEXT(Case_Length_in_Inches__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IIP: Case Size (Dimensions)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_UPC_Number_SCC__c</fullName>
        <description>UPC number for the case</description>
        <inlineHelpText>UPC number for the case</inlineHelpText>
        <label>IIP: Case UPC Number (SCC)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Weight__c</fullName>
        <label>IIP: Case Weight (in pounds)</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Width_in_Inches__c</fullName>
        <label>IIP: Case Width (in Inches)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cases_Per_Layer_TIE__c</fullName>
        <label>IIP: Cases Per Layer (TIE)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cases_Per_Pallet__c</fullName>
        <formula>Cases_Per_Layer_TIE__c *  Layers_per_Pallet_Height__c</formula>
        <label>IIP: Cases Per Pallet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cases_Produced__c</fullName>
        <label>IIP: Cases Produced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Catalog_Name__c</fullName>
        <description>Derived from Marketing Description. Populated by integration.</description>
        <inlineHelpText>Derived from Marketing Description. Populated by integration.</inlineHelpText>
        <label>IIP: Catalog Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Code_9__c</fullName>
        <label>Category Code 9</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_GL__c</fullName>
        <label>Category GL</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>IIP: Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_Availability__c</fullName>
        <label>Check Availability</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <description>Class of product based on the SGWS taxonomy classification system.</description>
        <inlineHelpText>Class of product based on the SGWS taxonomy classification system.</inlineHelpText>
        <label>IIP: Class</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Class</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closure_Type__c</fullName>
        <description>Closure for the product. Chose the option that matches best; for example, if the stopper is glass, choose &quot;Alternative&quot;. Zork is a peal and replace closure.</description>
        <inlineHelpText>Closure for the product. Chose the option that matches best. If closure is a &quot;cork type&quot;, please also select a cork option below.</inlineHelpText>
        <label>IIP: Base Item Closure Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALTERNATIVE</fullName>
                    <label>Alternative</label>
                </value>
                <value>
                    <fullName>CORK</fullName>
                    <label>Cork</label>
                </value>
                <value>
                    <fullName>CROWN CAP</fullName>
                    <label>Crown Cap</label>
                </value>
                <value>
                    <fullName>SCREW CAP/STEVLIN</fullName>
                    <label>Screw Cap/Stevlin</label>
                </value>
                <value>
                    <fullName>ZORK</fullName>
                    <label>Zork</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Color_classification__c</fullName>
        <label>IIP: Color (classification)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>001</fullName>
                    <label>Red</label>
                </value>
                <value>
                    <fullName>003</fullName>
                    <label>Rose</label>
                </value>
                <value>
                    <fullName>002</fullName>
                    <label>White</label>
                </value>
                <value>
                    <fullName>012</fullName>
                    <label>Clear - Water</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Color_marketing_description__c</fullName>
        <label>IIP: Color (marketing description)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commitment_Date_Method__c</fullName>
        <label>Commitment Date Method</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commitment_Method__c</fullName>
        <label>Commitment Method</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliance_Approval__c</fullName>
        <label>Compliance Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Approval_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Compliance_Approved_Timestamp__c</fullName>
        <label>Compliance Approved Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Compliance_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compliance Approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compliance_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compliance Rejected?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Container_Color__c</fullName>
        <label>IIP: Container Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clear</fullName>
                </value>
                <value>
                    <fullName>Brown</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Container_Type__c</fullName>
        <label>IIP: Container Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Glass Bottle</fullName>
                </value>
                <value>
                    <fullName>Can</fullName>
                </value>
                <value>
                    <fullName>Keg</fullName>
                </value>
                <value>
                    <fullName>Plastic Bottle</fullName>
                </value>
                <value>
                    <fullName>Tetra</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Convert1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>XXConvert1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Convert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Convert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copied_From__c</fullName>
        <label>Copied From?</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code_Lookup__c</fullName>
        <description>Lookup to the related Country Code, to support the CIF Upcharge Reference Table calculations.</description>
        <formula>Geography__r.Code_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code Lookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_of_Origin__c</fullName>
        <formula>Geography__r.Country_of_Origin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IIP: Country of Origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Craft_Spirit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a Craft Spirit?</description>
        <label>IIP: Craft Spirit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>IIP: Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DTC_Uncorked_item__c</fullName>
        <description>DTC is for Winery, UNC is for Uncorked</description>
        <label>IIP: DTC or Uncorked item</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None, DTC, UNC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_this_have_an_expiration_date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IIP: Does this have an expiration date?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dominant_Varietal__c</fullName>
        <label>IIP: Dominant Varietal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agiorgitiko</fullName>
                </value>
                <value>
                    <fullName>Aglianico</fullName>
                </value>
                <value>
                    <fullName>Albarino</fullName>
                </value>
                <value>
                    <fullName>Aligote</fullName>
                </value>
                <value>
                    <fullName>Arneis</fullName>
                </value>
                <value>
                    <fullName>Assyrtiko</fullName>
                </value>
                <value>
                    <fullName>Auxerrois</fullName>
                </value>
                <value>
                    <fullName>Barbera</fullName>
                </value>
                <value>
                    <fullName>Bordeaux Blend Red</fullName>
                </value>
                <value>
                    <fullName>Blend German Red</fullName>
                </value>
                <value>
                    <fullName>Blend German White</fullName>
                </value>
                <value>
                    <fullName>Aged Grappa</fullName>
                </value>
                <value>
                    <fullName>Languedoc Blend Red</fullName>
                </value>
                <value>
                    <fullName>Languedoc Blend White</fullName>
                </value>
                <value>
                    <fullName>Red Blend</fullName>
                </value>
                <value>
                    <fullName>White Proprietary Blend</fullName>
                </value>
                <value>
                    <fullName>Porto Blend</fullName>
                </value>
                <value>
                    <fullName>Provence Blend Red</fullName>
                </value>
                <value>
                    <fullName>Provence Blend White</fullName>
                </value>
                <value>
                    <fullName>Provence Rose Blend</fullName>
                </value>
                <value>
                    <fullName>Rhone Blend Red</fullName>
                </value>
                <value>
                    <fullName>Rhone Blend White</fullName>
                </value>
                <value>
                    <fullName>Tempranillo Blend</fullName>
                </value>
                <value>
                    <fullName>Veneto Blend Red</fullName>
                </value>
                <value>
                    <fullName>Veneto Blend White</fullName>
                </value>
                <value>
                    <fullName>Brachetto</fullName>
                </value>
                <value>
                    <fullName>Cabernet Franc</fullName>
                </value>
                <value>
                    <fullName>Cabernet Sauvignon</fullName>
                </value>
                <value>
                    <fullName>Carignane</fullName>
                </value>
                <value>
                    <fullName>Carmenere</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>